--- a/BookStore.BorrowingService/BookStore.BorrowingService.Api/appsettings.json
+++ b/BookStore.BorrowingService/BookStore.BorrowingService.Api/appsettings.json
@@ -1,12 +1,17 @@
 {
   "MongoDb": {
     "ConnectionString": "",
-    "LocalConnectionString": "mongodb://localhost:27017",
+    "LocalConnectionString": "mongodb://mongo:27017",
     "DatabaseName": {
-      "BookStore" : "BookStore"
-    },
-    "RabbitMq": {
-      "HostUri": "rabbitmq://guest:guest@localhost:5672"
+      "BookStore": "BookStore"
+    }
+  },
+  "RabbitMq": {
+    "Host": "rabbitmq://rabbitmq:5672",
+    "Username": "guest",
+    "Password": "guest",
+    "Queues": {
+      "Borrowing": "borrowing-queue"
     }
   }
 }
