--- a/BookStore.NotificationService/BookStore.NotificationService.Queries/BookStore.NotificationService.Queries.csproj
+++ b/BookStore.NotificationService/BookStore.NotificationService.Queries/BookStore.NotificationService.Queries.csproj
@@ -9,11 +9,15 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3-develop.1806" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookStore.BorrowingService.Domain\BookStore.BorrowingService.Domain.csproj" />
+    <ProjectReference Include="..\BookStore.NotificationService.Domain\BookStore.NotificationService.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Handlers\" />
+    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
