--- a/BookStore.NotificationService/BookStore.NotificationService.Commands/BookStore.NotificationService.Commands.csproj
+++ b/BookStore.NotificationService/BookStore.NotificationService.Commands/BookStore.NotificationService.Commands.csproj
@@ -13,7 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookStore.BorrowingService.Domain\BookStore.BorrowingService.Domain.csproj" />
+    <ProjectReference Include="..\BookStore.NotificationService.Domain\BookStore.NotificationService.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Handlers\" />
   </ItemGroup>
 
 </Project>
